--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-tensorflow-gpu == 2.4.0
+tensorflow-gpu# == 2.4.0
 numpy == 1.19.5
 matplotlib == 3.2.1
 tensorflow-determinism
+tensorflow# == 2.4.0
+scipy
+seaborn
+tqdm
+sklearn
+statsmodels
+tensorflow_probability
