initial experiments version with new collected data from statefarm etc

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ bedroom_pt_data/
 pt_data/
 augmented_data_positive+negative_t=1000/
 augmented_data_positive+negative_t=700/
+pt_data_mustang_10-28/
