--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ mustang_data_aug_milcom/
 mustang_data_noaug_milcom/
 mustang_data_aug_milcom_old/
 mustang_data_noaug_milcom_old/
+pt_data_mustang_testing_milcom/
+mustang_data_aug_milcom-withSiebel/
