--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ mustang_data_aug_milcom_old/
 mustang_data_noaug_milcom_old/
 pt_data_mustang_testing_milcom/
 mustang_data_aug_milcom-withSiebel/
+pt_data_mustang_testing_milcom_aug/
