add new data mode 4 with complex partition

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ mustang_data_noaug_milcom_old/
 pt_data_mustang_testing_milcom/
 mustang_data_aug_milcom-withSiebel/
 pt_data_mustang_testing_milcom_aug/
+siebel_10-16/
